change value to points

--- a/app/views/assignments/_assignment_score_level_fields.haml
+++ b/app/views/assignments/_assignment_score_level_fields.haml
@@ -2,8 +2,8 @@
   .columns
     = f.input :name, :label => "Level Name"
   .columns
-    = f.label :value, "Points Awarded"
-    = f.text_field :value
+    = f.label :points, "Points Awarded"
+    = f.text_field :points
     = f.hidden_field :id
   .right
     = f.hidden_field :_destroy, class: "destroy"
