--- a/app/views/grade_scheme_elements/index.html.haml
+++ b/app/views/grade_scheme_elements/index.html.haml
@@ -18,8 +18,8 @@
       %tr
         %th{scope: "col"} Grade
         %th{scope: "col"} Level
-        %th{scope: "col"} Low points
-        %th{scope: "col"} High Range
+        %th{scope: "col"} Low Points
+        %th{scope: "col"} High Points
     %tbody
       - @grade_scheme_elements.each do |element|
         %tr
