updated structure of predictor layout to include maxwidth constraint and added footer mobile styling

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -9,7 +9,7 @@ $predictor-font-size-4 : .85rem
 $predictor-font-size-5 : .55rem
 
 #predictor-main-content
-  background-color: rgba(255,255,255,0.5)
+  background-color: rgba(255,255,255,0.8)
   // Clear tabs:
   margin-top: 0rem
   padding-bottom: 1rem
@@ -27,6 +27,7 @@ $predictor-font-size-5 : .55rem
 
 .graphics-screen.sticky-item.stuck
   background-color: $color-white
+  max-width: 1500px
   z-index: 100
   position: fixed
   top: 45px
