--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -51,8 +51,7 @@
 
 @media (max-width: $media-small-max)
   .footer
-    height: auto !important
-    padding: 1rem 2rem
+    padding: 1rem 1rem
     font-size: .8rem
     text-align: center
     position: relative
@@ -60,8 +59,16 @@
     .left
       width: 100%
       text-align: center
+      float: none
 
     .right
       width: 100%
-      margin-bottom: 1rem
+      margin-bottom: .5rem
       text-align: center
+      float: none
+
+  .logged-in .footer
+    padding: 1rem 1rem
+
+    .footer-logo
+      margin: 0 auto
