--- a/app/views/assignments/group/_table_head.html.haml
+++ b/app/views/assignments/group/_table_head.html.haml
@@ -1,5 +1,5 @@
 %tr
   %th{:width => "20%"} #{term_for :group} Name
   %th Status
-  %th
-  %th
+  %th{"data-dynatable-no-sort" => "true" }
+  %th{"data-dynatable-no-sort" => "true" }
