added sticky footer with flex for public and in app pages, created a class for more consistent styling of background color overlays for public pages and minor adjustments to header and footer

--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -4,12 +4,13 @@
 .footer
   position: relative
   clear: both
-  padding: 4rem 2rem
+  padding: 3rem 2rem
   background-color: $color-grey-2
   opacity: .9
   box-sizing: border-box
   color: $color-grey-5
   font-size: 1rem
+  width: 100%
 
   ul
     margin: 0
