--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -1,6 +1,12 @@
 @import color
 @import layout
 
+.public
+  flex: 1
+
+.public-with-background
+  background-color: rgba($color-blue-3, .5)
+
 .page
   .hero-section
     margin: 0
