--- a/app/assets/stylesheets/_signup.sass
+++ b/app/assets/stylesheets/_signup.sass
@@ -1,11 +1,13 @@
 @import color
 @import layout
 
+.center-items
+  align-items: center
+  justify-content: center
+  display: flex
+
 section.pilot
-  margin-top: 45px
-  background-color: rgba($color-blue-3, .5)
   color: $color-white
-  padding: 4em 2em
 
   h1, p
     color: $color-grey-2
@@ -28,4 +30,8 @@ section.pilot
 @media (max-width: $media-small-max)
   section.pilot
     padding: .5em 1em
+    margin-top: 45px
+
+  .center-items
+    display: block
 
