--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -5,11 +5,16 @@ body
   margin: 0 auto
   padding: 0
   position: relative
+  display: flex
+  min-height: 100vh
+  flex-direction: column
 
 .inner-wrap
   margin: 2rem auto 0 auto
   max-width: 1500px
   width: 100%
+  flex: 1 0 auto
+  background-color: white
 
 .outer-wrap
   padding: 0.1rem 0
@@ -29,11 +34,12 @@ body
 .pageContent
   padding: 1rem
   background-color: $color-white
-  min-height: 100%
+  // min-height: 100%
 
 .student.mainContent
   width: 100%
   float: left
+  flex: 1
 
 /* Allow other things to appear above the timeline */
 .vco-storyjs
