revised structure of predictor page to allow sticky footer styles to work here too as well as small refinements to student subnav

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -8,8 +8,10 @@ $predictor-font-size-3 : 1rem
 $predictor-font-size-4 : .85rem
 $predictor-font-size-5 : .55rem
 
-#predictor-main-content
+.predictor-inner.inner-wrap
   background-color: rgba(255,255,255,0.8)
+
+#predictor-main-content
   // Clear tabs:
   margin-top: 0rem
   padding-bottom: 1rem
