--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -3,8 +3,8 @@
 
 /* Tabs on the student dashboard */
 .sub-nav
-  margin: 0
-  padding: 1.5rem 0.5rem 0.75rem 1.5rem
+  margin: 10px 0 0 0
+  padding: 0.75rem 0rem
   display: block
   position: relative
   overflow: hidden
@@ -34,16 +34,14 @@
     li
       font-size: .8rem
       background-color: $color-blue-2
-      border-top-left-radius: $global-radius
-      border-top-right-radius: $global-radius
-      margin: 0 0.5rem 0 0
-      padding: 1rem 0
+      margin: 0 0.25rem 0 0
+      padding: 0.8rem 0
       text-transform: uppercase
       a
-        padding: 1em
+        padding: 0.8rem 0.5rem
         color: $color-white
     li.active
-      padding: 1rem .75rem !important
+      padding: .8rem .5rem !important
     
     h5, hr
       display: none
