fixed one pixel border under logo on hover for size 1024 up

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -197,6 +197,9 @@ ul.subnav.logged-out
 
   .the-nav .nav-pill.right
     z-index: 100
+  .the-nav .nav-pill.left
+    height: 45px
+    overflow: hidden
   .the-nav > .nav
     margin: 0
     padding-left: 0
