--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -5,16 +5,26 @@ body
   margin: 0 auto
   padding: 0
   position: relative
+  display: -webkit-box
+  display: -webkit-flex
+  display: -ms-flexbox
   display: flex
-  min-height: 100vh
+  -webkit-box-orient: vertical
+  -webkit-box-direction: normal
+  -webkit-flex-direction: column
+  -ms-flex-direction: column
   flex-direction: column
+  height: 100vh
 
 .inner-wrap
   margin: 2rem auto 0 auto
   max-width: 1500px
   width: 100%
+  -webkit-box-flex: 1
+  -webkit-flex: 1 0 auto
+  -ms-flex: 1 0 auto
   flex: 1 0 auto
-  background-color: white
+  background-color: $color-white
 
 .outer-wrap
   padding: 0.1rem 0
