--- a/app/assets/stylesheets/_signup.sass
+++ b/app/assets/stylesheets/_signup.sass
@@ -2,8 +2,18 @@
 @import layout
 
 .center-items
+  padding-top: 50px
+  -webkit-box-align: center
+  -webkit-align-items: center
+  -ms-flex-align: center
   align-items: center
+  -webkit-box-pack: justify
+  -webkit-justify-content: center
+  -ms-flex-pack: justify
   justify-content: center
+  display: -webkit-box
+  display: -ms-flexbox
+  display: -webkit-flex
   display: flex
 
 section.pilot
