added class to provide tables with large data sets ability to scroll horizontally on desktop without breaking structure of the page

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -36,6 +36,10 @@ table
       a, a.active, a.sorted
         color: $color-white !important
 
+.scroll-table
+  overflow-x: scroll
+  display: block
+
 /* Styling pattern tables for assignment outcome overview */
 td.complete, tr.achieved
   background-color: $color-green-1
