--- a/app/views/assignment_types/index.html.haml
+++ b/app/views/assignment_types/index.html.haml
@@ -42,42 +42,44 @@
 
   %h4.subtitle= "#{term_for :student} Scores"
 
-  %table.dynatable.no-table-header.no-button-bar
-    %thead
-      %tr
-        %th First Name
-        %th Last Name
-        - @assignment_types.each do |at|
-          %th= "#{at.name} Points"
-          - if at.student_weightable?
-            %th= "#{at.name} Weighted Points"
-    %tbody
-      - @students.each do |student|
+  .scroll-table
+    %table.dynatable.no-table-header.no-button-bar
+      %thead
         %tr
-          %td= link_to student.first_name, student_path(student)
-          %td= link_to student.last_name, student_path(student)
+          %th First Name
+          %th Last Name
           - @assignment_types.each do |at|
-            %td= points at.visible_score_for_student(student)
+            %th= "#{at.name} Points"
             - if at.student_weightable?
-              %td= points at.raw_score_for_student(student)
-              %span.sr-only= at.name
+              %th= "#{at.name} Weighted Points"
+      %tbody
+        - @students.each do |student|
+          %tr
+            %td= link_to student.first_name, student_path(student)
+            %td= link_to student.last_name, student_path(student)
+            - @assignment_types.each do |at|
+              %td= points at.visible_score_for_student(student)
+              - if at.student_weightable?
+                %td= points at.raw_score_for_student(student)
+                %span.sr-only= at.name
 
   %h4.subtitle= "#{term_for :student} Grade Counts"
 
-  %table.dynatable.no-table-header.no-button-bar
-    %thead
-      %tr
-        %th First Name
-        %th Last Name
-        - @assignment_types.each do |at|
-          %th= "#{at.name} Grade Count"
-          %th= "#{at.name} Grades > 0 Count"
-
-    %tbody
-      - @students.each do |student|
+  .scroll-table
+    %table.dynatable.no-table-header.no-button-bar
+      %thead
         %tr
-          %td= link_to student.first_name, student_path(student)
-          %td= link_to student.last_name, student_path(student)
+          %th First Name
+          %th Last Name
           - @assignment_types.each do |at|
-            %td= points at.grades.where(student_id: student.id).graded_or_released.count
-            %td= points "#{at.grades.where(student_id: student.id).graded_or_released.positive.count }"
+            %th= "#{at.name} Grade Count"
+            %th= "#{at.name} Grades > 0 Count"
+
+      %tbody
+        - @students.each do |student|
+          %tr
+            %td= link_to student.first_name, student_path(student)
+            %td= link_to student.last_name, student_path(student)
+            - @assignment_types.each do |at|
+              %td= points at.grades.where(student_id: student.id).graded_or_released.count
+              %td= points "#{at.grades.where(student_id: student.id).graded_or_released.positive.count }"
