Fixed bug in rubric display

--- a/app/views/grades/_grade_content.haml
+++ b/app/views/grades/_grade_content.haml
@@ -29,7 +29,7 @@
 
 - if grade.assignment.grade_with_rubric?
   .rubric-container
-    = render partial: "rubrics/components/rubric_table", locals: { rubric: grade.assignment.rubric, student: grade.student, include_grade_info: true }
+    = render partial: "rubrics/components/rubric_table", locals: { presenter: Assignments::Presenter.new(assignment: grade.assignment, course: current_course), rubric: grade.assignment.rubric, student: grade.student, include_grade_info: true }
 
 - if current_user_is_student?
   = render partial: "grades/components/request_feedback", locals: { grade: grade }
