added scroll to gradebook table in assignment types

--- a/app/views/assignment_types/all_grades.html.haml
+++ b/app/views/assignment_types/all_grades.html.haml
@@ -26,7 +26,7 @@
     Numbers reflect streaks - how many times in a row a #{(term_for :student).downcase} has earned the maximum number of points on an #{term_for :assignment}
 
   / Gradebook Pattern Table
-  #gradebook
+  .scroll-table#gradebook
     %table
       %thead
         %tr
