Fix issues with earned_badges routes

--- a/app/views/badges/_context_menu.haml
+++ b/app/views/badges/_context_menu.haml
@@ -22,6 +22,6 @@
           Award
     - if actions.include? :quick_award
       %li
-        %a{:href => mass_award_badge_path(badge) }
+        %a{:href => mass_edit_badge_earned_badges_path(badge) }
           = glyph(:check)
           Quick Award
