added team picture to team public page

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -77,6 +77,11 @@
   text-transform: uppercase
   margin: 1em 0
 
+.team-photo
+  display: block
+  margin: 1rem auto
+  width: 75%
+
 .logged-out .page .hero-section, .logged-out .features .hero-section
   margin: 2.5rem 0 0
 
@@ -99,3 +104,6 @@
         h2
           font-size: 1.25rem
           margin-bottom: .5rem
+
+  .team-photo
+    width: 100%
