--- a/app/views/pages/team.html.haml
+++ b/app/views/pages/team.html.haml
@@ -4,6 +4,8 @@
     %ul.public-subnav= render "subnav"
   .main-section
     .main-section-content
+      = image_tag "gradecraft-team.jpg", :class => "team-photo"
+
       %h2.role-title.bold Co-Founders
 
       %p <strong>Barry Fishman</strong> is an Arthur F. Thurnau Professor of Learning Technologies in the University of Michigan School of Information and School of Education. His research focuses on video games as model learning environments, the use of technology to support teacher learning, standards-based systemic school reform, and the role of educational leaders in fostering classroom-level reform involving technology. He is Chair of the DIAG, and an Academic Innovation Fellow in the DEI. He was a long-serving Associate Editor of The Journal of the Learning Sciences, and served as a co-author of the Obama Administration’s 2010 U.S. National Educational Technology Plan. Barry received his A.B. from Brown University in English and American Literature in 1989, his M.S. from Indiana University in Instructional Systems Technology in 1992, and his Ph.D. in Learning Sciences from Northwestern University in 1996.
@@ -18,16 +20,14 @@
 
       %p <strong>Mike Zazaian</strong> is a celebrated tyrant and collector of objects measured as near-perfect spheres and rated at least a 4.3 on the Mohs scale of mineral hardness. He’s been involved in software development and graphic design for most of his life, having played virtually every role in the web production process from server administrator to creative director. GradeCraft marks something of a homecoming for Mike, whose first role on a major web platform came as co-lead developer of the Michigan Youth Caucus for the University of Michigan School of Education in 2001. He’s excited to be a member of the GradeCraft team, and for the imminent extradition of his hedgehog Randolph from the United Arab Emirates.
 
-      %p <strong>Shekhar Patil</strong>  has a Master’s degree in Computer Science. He designed and implemented GradeCraft’s servers architecture and helps it scale and keeps it up to date. He loves to listen to music and sing in his spare time. The team calls him the Martian.
+      %p <strong>Shekhar Patil</strong> has a Master’s degree in Computer Science. He designed and implemented GradeCraft’s servers architecture and helps it scale and keeps it up to date. He loves to listen to music and sing in his spare time. The team calls him the Martian.
 
       %p <strong>Maverick Koon</strong> is an intern, and a junior in high school. He enjoys writing in and learning about different programming languages, and loves Ruby. Maverick helps write the wiki for GradeCraft, sifting through Ruby code to understand how various aspects of the site relate to one another.
 
       %h2.role-title.bold Research, Design, and Support
 
-      %p <strong>Rachel Niemer</strong> is Director of Digital Pedagogy and Learning Communities in the Office of Digital Education and Innovation.  Her work focuses on supporting faculty use of pedagogical best practices as they explore and innovate with new tools and technologies.  Rachel received a B.A. in Chemistry and Women’s Studies from Bowdoin College and a Ph.D. in Chemistry from Caltech.
+      %p <strong>Rachel Niemer</strong> is Director of Digital Pedagogy and Learning Communities in the Office of Digital Education and Innovation. Her work focuses on supporting faculty use of pedagogical best practices as they explore and innovate with new tools and technologies. Rachel received a B.A. in Chemistry and Women’s Studies from Bowdoin College and a Ph.D. in Chemistry from Caltech.
 
       %p <strong>Marie Hooper</strong> is the GradeCraft project coordinator. Her interests include the use of technology to optimize business processes and the design of workflows to support organizational improvement. She received a B.S. in Finance from the University of Florida.
-
-      %p <strong>Christine Yu</strong> is a senior at the University of Michigan School of Literature, Science, & Arts pursuing a double major in Social Computing Informatics and Psychology. Her interests involve the intersection of humans and technology with a focus on human-computer interaction and user experience design. After graduation, she hopes to move out to the west coast and pursue her career in the tech industry.
 
       %p <strong>Ben Plummer</strong> is a doctoral student at the University of Michigan School of Education and Psychology and is also part of the Learning Education and Design Lab (LED). He believes that great video games are extremely engaging due to the way they offer players a lot of choices and feedback and is interested in whether the motivational benefits of video games can be applied in the classroom. Specifically, if classrooms can be made more motivating for students by restructuring them around the motivational aspects of video games (e.g. offer more assignment choice).
