Clean up students routes

--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -33,7 +33,7 @@
             %td
               - if current_user_is_staff? && presenter.view_student_context?
                 = render partial: "badges/components/name",
-                  locals: { badge: badge, title: link_to(badge.name, student_badge_show_path(presenter.student, badge)) }
+                  locals: { badge: badge, title: link_to(badge.name, student_badge_path(presenter.student, badge)) }
               - else
                 = render partial: "badges/components/name",
                   locals: { badge: badge, title: link_to(badge.name, badge_path(badge)) }
@@ -59,7 +59,7 @@
             %td
               - if current_user_is_staff? && presenter.view_student_context?
                 = render partial: "badges/components/description",
-                  locals: { badge: badge, title: link_to(badge.name, student_badge_show_path(presenter.student, badge)) }
+                  locals: { badge: badge, title: link_to(badge.name, student_badge_path(presenter.student, badge)) }
               - else
                 = render partial: "badges/components/description",
                   locals: { badge: badge, title: link_to(badge.name, badge_path(badge)) }
