--- a/app/views/grades/analytics/_individual_analytics.haml
+++ b/app/views/grades/analytics/_individual_analytics.haml
@@ -1,6 +1,6 @@
 .tab-container
   %h4.bold Basic Stats
-  - if presenter.grades_available_for? current_student
+  - if presenter.has_grades?
     %ul
     %li
       %span.small_uppercase Average Score:
@@ -12,7 +12,6 @@
       %span.small_uppercase High Score:
       = points presenter.assignment.high_score
 
-  - if presenter.has_scores_for?(current_student)
     %br
     %h4.bold Grade Distribution
     .grades_per_assign{ "data-scores" => presenter.scores_for(current_student).to_json, :style => "width: 200px" }
