replaced timeline partial with sidebar partial for beginning of student dashboard

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -2,13 +2,13 @@
 @import layout
 
 .student-sidebar
-  width: 285px
-  margin-top: 0rem
-  padding: 1rem
-  background-color: $color-blue-2
-  color: $color-white
-  opacity: .9
-  float: left
+  // width: 285px
+  // margin-top: 0rem
+  // padding: 1rem
+  // background-color: $color-blue-2
+  // color: $color-white
+  // opacity: .9
+  // float: left
 
   .avatar
     text-align: center
@@ -22,9 +22,8 @@
 
   .panel
     margin-bottom: 1.25rem
-
-    &.earned_points
-      margin-bottom: 0rem
+    width: 30%
+    border: 1px solid #eee
 
   a
     color: $color-blue-4
