--- a/app/views/info/_student_dashboard.html.haml
+++ b/app/views/info/_student_dashboard.html.haml
@@ -4,6 +4,5 @@
 
   = render "layouts/alerts"
 
-  #loading
-    Loading data, please wait...
-  #time_line{}
+  .student-sidebar
+    = render "students/student_sidebar"
