added challenge descriptions to student show page and linked to them in table on index page rather than showing description there

--- a/app/views/challenges/_show_student.haml
+++ b/app/views/challenges/_show_student.haml
@@ -1,3 +1,8 @@
+%h4.subtitle Description
+.challenge-description
+  = raw @challenge.description
+
+%h4.subtitle Scores
 %table.dynatable
   %thead
     %tr
