--- a/app/views/challenges/_show_instructor.haml
+++ b/app/views/challenges/_show_instructor.haml
@@ -13,6 +13,12 @@
           %th.center{"data-dynatable-no-sort" => "true" }
             %button.button.select-all= "Check All"
             %button.button.select-none= "Uncheck"
+
+    %h4.subtitle Description
+    .challenge-description
+      = raw @challenge.description
+
+    %h4.subtitle Scores
     %tbody
       - @teams.alpha.each do |team|
         - challenge_grade = @challenge.challenge_grades.find_by team: team
