added chronological and alphabetical sort to both instructor and student side challenges

--- a/app/views/challenges/_staff_index.haml
+++ b/app/views/challenges/_staff_index.haml
@@ -12,7 +12,7 @@
       %th{ :style => "min-width: 220px" }
 
   %tbody
-    - @challenges.each do |challenge|
+    - @challenges.chronological.alphabetical.each do |challenge|
       %tr
         %td= link_to challenge.name, challenge
         %td= link_to "See Description", challenge
