--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -24,6 +24,10 @@
           = f.label :password_confirmation
           = f.password_field :password_confirmation, as: :password
 
+      .form-item
+        = f.label :time_zone
+        = f.time_zone_select :time_zone
+
       - if @user.is_student?(current_course)
         - if current_course.teams_visible? && (current_course.in_team_leaderboard? || (current_student.team_for_course(current_course).present? && current_student.team_for_course(current_course).in_team_leaderboard?)) || current_course.character_names?
           .form-item
