Clean up the saml routes

--- a/app/views/layouts/navigation/_public_nav.haml
+++ b/app/views/layouts/navigation/_public_nav.haml
@@ -1,5 +1,5 @@
 %li
-  = link_to "U-M Login", saml_init_path 
+  = link_to "U-M Login", init_saml_path
 
 %li
   = link_to "GradeCraft Login", new_user_session_path
