moved quick grade buttons onto own line and added bottom-margin for better consistency and legibility on mobile

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -113,6 +113,10 @@ tbody
         border-top-right-radius: $global-radius
         border-bottom-right-radius: $global-radius
 
+.quick-grade-button
+  display: inline-block
+  margin-bottom: 1rem
+
 .notification-badge
   background-color: $color-red-1
   border-radius: 10px
