--- a/app/views/info/_submissions_table.haml
+++ b/app/views/info/_submissions_table.haml
@@ -5,7 +5,7 @@
 - submissions_by_assignment.each do |assignment, submissions|
   %h4.assignment_name
     = link_to assignment.name, assignment
-    = link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(assignment), class: "button"
+  = link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(assignment), class: "button quick-grade-button"
   %table.dynatable.no-table-header{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
