--- a/app/views/info/top_10.html.haml
+++ b/app/views/info/top_10.html.haml
@@ -7,13 +7,13 @@
 
   %h4.subtitle Top 10
 
-  = render "students_table", course: current_course, :students => @top_ten_students
+  = render partial: "students_table", locals: { course: current_course, :students => @top_ten_students }
 
   - if @bottom_ten_students.present?
     %h4.subtitle Bottom 10
 
-    = render "students_table", course: current_course, :students => @bottom_ten_students
+    = render partial: "students_table", locals: { course: current_course, :students => @bottom_ten_students }
 
   - if current_course.teams.present?
     %h4.subtitle #{term_for :team} Overview
-    = render "teams_table", course: current_course, :teams => current_course.teams
+    = render partial: "teams_table", locals: { course: current_course, :teams => current_course.teams }
