Fix issue with route for mass_earn earned badges

--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -8,7 +8,7 @@
   = team_filter(@teams) if current_course.has_teams?
 
   #massGrade
-    = simple_form_for @badge, method: :post, :html => {class: "mass-edit-earned-badges" }, :url => mass_earn_badge_path(@badge) do |f|
+    = simple_form_for @badge, method: :post, :html => {class: "mass-edit-earned-badges" }, :url => mass_earn_badge_earned_badges_path(@badge) do |f|
       %table
         %thead
           %tr
