--- a/app/views/layouts/navigation/_top_bar_logged_out.haml
+++ b/app/views/layouts/navigation/_top_bar_logged_out.haml
@@ -8,7 +8,7 @@
               = image_tag "gradecraft_logo.png", :width => "150", :class => "logo-home"
               = image_tag "GradeCraft_Logo_Mark_RGB.png", :width => "30", :class => "gc-mark"
         %ul.nav.nav-pill.right.public-nav
-          = render "layouts/navigation/public_nav"
-        = render "layouts/navigation/login_nav"
+          = render partial: "layouts/navigation/public_nav"
+        = render partial: "layouts/navigation/login_nav"
         %a.btn-public-nav
           %i.fa.fa-bars.fa-fw
