--- a/app/views/layouts/_staff.haml
+++ b/app/views/layouts/_staff.haml
@@ -1,12 +1,12 @@
 .sidebar-container.hide-for-small.hide-for-medium
   / Staff-only sidebar navigation
-  = render "layouts/navigation/staff_subnav"
+  = render partial: "layouts/navigation/staff_subnav"
 
 .mainContainer.staff{role: "main"}
 
   - if current_student.present?
     = content_nav do
-      = render "students/student_profile_tabs"
+      = render partial: "students/student_profile_tabs"
 
   / Page content
-  .mainContent{ class: (@display_sidebar ? "student" : "") }= render "layouts/content"
+  .mainContent{ class: (@display_sidebar ? "student" : "") }= render partial: "layouts/content"
