--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,24 +7,24 @@
       = current_course.try(:name) || "GradeCraft"
     = stylesheet_link_tag "application", "https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600"
     = stylesheet_link_tag "application", :media => "all"
-    = render "layouts/favicon"
+    = render partial: "layouts/favicon"
     = csrf_meta_tags
     = yield(:head)
 
   %body(class="#{body_class}")
-    = render "layouts/top_bar"
+    = render partial: "layouts/top_bar"
     - if current_user
       .inner-wrap.clearfix
         - if current_user_is_staff?
-          = render "layouts/staff"
+          = render partial: "layouts/staff"
         - else
-          = render "layouts/student"
+          = render partial: "layouts/student"
     - else
-      = render "layouts/public"
-    = render "layouts/help/uservoice"
+      = render partial: "layouts/public"
+    = render partial: "layouts/help/uservoice"
     .footer
-      = render "layouts/footer"
-    = render "layouts/background"
-    = render "layouts/google_analytics"
+      = render partial: "layouts/footer"
+    = render partial: "layouts/background"
+    = render partial: "layouts/google_analytics"
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = yield(:scripts)
