--- a/app/views/layouts/mailers/notification_layout.html.haml
+++ b/app/views/layouts/mailers/notification_layout.html.haml
@@ -4,7 +4,7 @@
     %meta{:content => "width=device-width", name: "viewport"}/
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title= @page_title rescue "GradeCraft Notification"
-    = render "layouts/mailers/stylesheet"
+    = render partial: "layouts/mailers/stylesheet"
 
   %body{:bgcolor => "#f6f6f6"}
     / body
@@ -15,11 +15,11 @@
           / content
           .content
             %table
-              %tr= render "layouts/mailers/logo"
+              %tr= render partial: "layouts/mailers/logo"
               %tr
                 %td
                   = yield
-              = render "layouts/mailers/social_media"
+              = render partial: "layouts/mailers/social_media"
 
     / footer
-    = render "layouts/mailers/footer"
+    = render partial: "layouts/mailers/footer"
