--- a/app/views/students/sidebar/_sidebar_avatar.haml
+++ b/app/views/students/sidebar/_sidebar_avatar.haml
@@ -13,4 +13,4 @@
     %li= link_to glyph(:edit) + "Edit", edit_user_path(current_student), class: "button"
     %li= link_to glyph(:envelope) + "Email", "mailto:#{current_student.email}", class: "button"
     - if current_user_is_admin?
-      %li= link_to "Recalculate Score", student_recalculate_path(student_id: current_student.id), class: "button"
+      %li= link_to "Recalculate Score", student_recalculate_path(current_student), class: "button"
