added styles for dashboard module card design

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -2,13 +2,20 @@
 @import layout
 
 .student-sidebar
-  // width: 285px
-  // margin-top: 0rem
-  // padding: 1rem
-  // background-color: $color-blue-2
-  // color: $color-white
-  // opacity: .9
-  // float: left
+
+  .dashboard-module
+    margin-bottom: 1.25rem
+    width: 30%
+    border: 1px solid #eee
+
+  .card-header
+    background-color: $color-blue-2
+    color: $color-white
+    padding: 0.25rem
+
+  .card-body
+    padding: .25em
+
 
   .avatar
     text-align: center
@@ -20,21 +27,16 @@
       a:hover
         background-color: $color-green-2
 
-  .panel
-    margin-bottom: 1.25rem
-    width: 30%
-    border: 1px solid #eee
+  // .panel
+  //   margin-bottom: 1.25rem
+  //   width: 30%
+  //   border: 1px solid #eee
 
   a
     color: $color-blue-4
     font-weight: 300
     &:hover
       color: $color-green-2
-
-  hr
-    margin: .25rem 0
-    border: 0
-    border-bottom: 1px dashed $color-white
 
   h3
     margin: 0
