--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -1,22 +1,23 @@
 .text-center
-  %h3= term_for :badges
-  %hr
-  %ul.block-grid
-    - cache multi_cache_key :student_sidebar_badges, current_student, current_course do
-      - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
-        %li= sidebar_earned_badge badge, current_student
+  .card-header
+    %h3= term_for :badges
+  .card-body
+    %ul.block-grid
+      - cache multi_cache_key :student_sidebar_badges, current_student, current_course do
+        - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
+          %li= sidebar_earned_badge badge, current_student
 
-      - current_student.student_visible_unearned_badges(current_course).each do |badge|
-        - cache ["v1", badge] do
-          %li
-            %a
-              %img{:src => badge.icon, :alt => badge.name, class: "unearned"}
-            .display_on_hover.hover-style.right
-              - if badge.name_visible_for_student?(current_student)
-                = "Not yet earned: #{badge.name}"
-              - else
-                .bold= "Locked #{(term_for :badge).titleize}"
-                .italic= "You must unlock this #{term_for :badge} to learn more about it"
+        - current_student.student_visible_unearned_badges(current_course).each do |badge|
+          - cache ["v1", badge] do
+            %li
+              %a
+                %img{:src => badge.icon, :alt => badge.name, class: "unearned"}
+              .display_on_hover.hover-style.right
+                - if badge.name_visible_for_student?(current_student)
+                  = "Not yet earned: #{badge.name}"
+                - else
+                  .bold= "Locked #{(term_for :badge).titleize}"
+                  .italic= "You must unlock this #{term_for :badge} to learn more about it"
 
-    - if current_student.earned_badge_score_for_course(current_course) > 0
-      .italic.small= "You've earned #{points current_student.earned_badge_score_for_course(current_course)} points through #{(term_for :badges).titleize}."
+      - if current_student.earned_badge_score_for_course(current_course) > 0
+        .italic.small= "You've earned #{points current_student.earned_badge_score_for_course(current_course)} points through #{(term_for :badges).titleize}."
