added card classes to remaining dashboard modules

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -11,10 +11,10 @@
   .card-header
     background-color: $color-blue-2
     color: $color-white
-    padding: 0.25rem
+    padding: 0.25rem 0.5rem
 
   .card-body
-    padding: .25em
+    padding: 0.5em
 
 
   .avatar
