--- a/app/views/students/sidebar/_sidebar_earned_points_and_level.haml
+++ b/app/views/students/sidebar/_sidebar_earned_points_and_level.haml
@@ -1,14 +1,15 @@
 .text-center
-  %h3.subtitle Your Status
-  %hr
-  You have earned
-  %span.bold #{points current_student.cached_score_for_course(current_course)} points
-  - if current_student.grade_level_for_course(current_course).present?
-    / Display current level if it is present
-    %br
-    You have achieved the
-    %span.bold= link_to "#{current_student.grade_level_for_course(current_course)} level", course_progress_path
-  - cache multi_cache_key :student_sidebar_total_score, current_student, current_course do
-    - scores = total_scores_for_chart current_student, current_course
-    #data-predictor{"data-predictor" =>  scores.to_json}
-    .chart#userBarTotal
+  .card-header
+    %h3.subtitle Your Status
+  .card-body
+    You have earned
+    %span.bold #{points current_student.cached_score_for_course(current_course)} points
+    - if current_student.grade_level_for_course(current_course).present?
+      / Display current level if it is present
+      %br
+      You have achieved the
+      %span.bold= link_to "#{current_student.grade_level_for_course(current_course)} level", course_progress_path
+    - cache multi_cache_key :student_sidebar_total_score, current_student, current_course do
+      - scores = total_scores_for_chart current_student, current_course
+      #data-predictor{"data-predictor" =>  scores.to_json}
+      .chart#userBarTotal
