created truncated version of grading scheme for dashboard module

--- a/app/views/students/_student_sidebar.html.haml
+++ b/app/views/students/_student_sidebar.html.haml
@@ -13,3 +13,5 @@
 
 - if current_course.has_badges?
   .panel.dashboard-module= render "students/sidebar/sidebar_badges"
+
+.panel.dashboard-module= render "students/sidebar/sidebar_grading_scheme"
