added and position modules on dashboard with flexbox to achieve columnar layout as designed

--- a/app/views/students/sidebar/_sidebar_assignment_weights.haml
+++ b/app/views/students/sidebar/_sidebar_assignment_weights.haml
@@ -1,24 +1,25 @@
 .text-center
-  %h3 #{term_for :weights}
-  %hr
-  - current_course.assignment_types.each do |at|
-    - if at.student_weightable?
-      %div
-        %span.bold= at.name
-        = "- #{current_student.weight_for_assignment_type(at)} #{(term_for :weight).capitalize}"
-  - if current_course.assignment_weight_open? && current_user_is_student?
-    %p= link_to "Edit My Choices", mass_edit_assignment_type_weights_path, class: "button"
-  - else
-    %p= link_to "Edit #{(term_for :weight).capitalize} Choices", mass_edit_assignment_type_weights_path(student_id: current_student.id), class: "button"
 
-  %h5 Rules of The Game
-  %ul.small
-    //%li You have until #{current_course.try(:weights_close_at).strftime("%A, %B %d, %Y, at %H:%M%p")} to make your #{(term_for :weight).titleize} decision
-    - if current_course.max_weights_per_assignment_type.present?
-      %li You may place up to #{current_course.max_weights_per_assignment_type} #{ ( term_for :weights).titleize } on a single #{ (term_for :assignment_type).downcase}
-    - if current_course.max_assignment_types_weighted.present?
-      %li You may work on up to #{ current_course.max_assignment_types_weighted} #{ (term_for :assignment_types).downcase}
-    - if current_course.weights_close_at.present?
-      %li You must make your decision by <b>#{current_course.weights_close_at}</b>
-    - if current_course.default_weight.present?
-      %li Any #{(term_for :assignment_types).downcase} you do not place #{ ( term_for :weights).titleize } on but have grades for will be multiplied by #{current_course.default_weight}.
+    %h3 #{term_for :weights}
+  .card-body
+    - current_course.assignment_types.each do |at|
+      - if at.student_weightable?
+        %div
+          %span.bold= at.name
+          = "- #{current_student.weight_for_assignment_type(at)} #{(term_for :weight).capitalize}"
+    - if current_course.assignment_weight_open? && current_user_is_student?
+      %p= link_to "Edit My Choices", mass_edit_assignment_type_weights_path, class: "button"
+    - else
+      %p= link_to "Edit #{(term_for :weight).capitalize} Choices", mass_edit_assignment_type_weights_path(student_id: current_student.id), class: "button"
+
+    %h5 Rules of The Game
+    %ul.small
+      //%li You have until #{current_course.try(:weights_close_at).strftime("%A, %B %d, %Y, at %H:%M%p")} to make your #{(term_for :weight).titleize} decision
+      - if current_course.max_weights_per_assignment_type.present?
+        %li You may place up to #{current_course.max_weights_per_assignment_type} #{ ( term_for :weights).titleize } on a single #{ (term_for :assignment_type).downcase}
+      - if current_course.max_assignment_types_weighted.present?
+        %li You may work on up to #{ current_course.max_assignment_types_weighted} #{ (term_for :assignment_types).downcase}
+      - if current_course.weights_close_at.present?
+        %li You must make your decision by <b>#{current_course.weights_close_at}</b>
+      - if current_course.default_weight.present?
+        %li Any #{(term_for :assignment_types).downcase} you do not place #{ ( term_for :weights).titleize } on but have grades for will be multiplied by #{current_course.default_weight}.
