--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -2,10 +2,28 @@
 @import layout
 
 .student-sidebar
+  display: flex
+  flex-direction: row
+
+  .col-30
+    width: 30%
+    display: flex
+    flex-direction: column
+    margin-right: 1rem
+
+  .col-40
+    width: 40%
+    display: flex
+    flex-direction: column
+    margin-right: 1rem
+
+  .column-row
+    display: flex
+    flex-direction: row
 
   .dashboard-module
     margin-bottom: 1.25rem
-    width: 30%
+    width: 100%
     border: 1px solid #eee
 
   .card-header
@@ -38,10 +56,6 @@
       a:hover
         background-color: $color-green-2
 
-  // .panel
-  //   margin-bottom: 1.25rem
-  //   width: 30%
-  //   border: 1px solid #eee
 
   a
     font-weight: 300
@@ -51,6 +65,7 @@
   h3
     margin: 0
     padding: 0
+    font-size: .9rem
 
   .form_label
     color: $color-green-2
