--- a/app/views/students/_student_sidebar.html.haml
+++ b/app/views/students/_student_sidebar.html.haml
@@ -1,17 +1,25 @@
-- if current_user_is_staff?
-  .panel= render "students/sidebar/sidebar_avatar"
+.col-30
+  .panel.todo.dashboard-module= render "students/sidebar/sidebar_to_do_list"
 
-.panel.dashboard-module.earned_points= render "students/sidebar/sidebar_earned_points_and_level"
+.col-40
+  .panel.dashboard-module= render "students/sidebar/sidebar_course_planner"
 
-- if current_course.student_weighted?
-  .panel.dashboard-module= render "students/sidebar/sidebar_assignment_weights"
+  .column-row
+    .panel.dashboard-module= render "students/sidebar/sidebar_since_last_login"
 
-.panel.todo.dashboard-module= render "students/sidebar/sidebar_to_do_list"
+    - if ! current_course.hide_analytics?
+      .panel.dashboard-module= render "students/sidebar/sidebar_grade_distribution"
 
-- if ! current_course.hide_analytics?
-  .panel.dashboard-module= render "students/sidebar/sidebar_grade_distribution"
+  - if current_user_is_staff?
+    .panel= render "students/sidebar/sidebar_avatar"
 
-- if current_course.has_badges?
-  .panel.dashboard-module= render "students/sidebar/sidebar_badges"
+.col-30
+  .panel.dashboard-module.earned_points= render "students/sidebar/sidebar_earned_points_and_level"
 
-.panel.dashboard-module= render "students/sidebar/sidebar_grading_scheme"
+  .panel.dashboard-module= render "students/sidebar/sidebar_grading_scheme"
+
+  - if current_course.has_badges?
+    .panel.dashboard-module= render "students/sidebar/sidebar_badges"
+
+  - if current_course.student_weighted?
+    .panel.dashboard-module= render "students/sidebar/sidebar_assignment_weights"
