wrote test implementation for next and previous levels in user model for grading scheme module on dashboard

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -46,6 +46,21 @@
     &:nth-child(even)
       background-color: $color-grey-6
 
+  .bar_magic
+    border-radius: 5px
+    padding: .25rem
+    width: 80%
+    font-size: 0.8rem
+
+  .bar_magic.current
+    padding: 0.5rem 1rem
+
+    .your-rank
+      font-size: 0.9rem
+
+    .left-points, .right-points
+      margin: 0
+
   .avatar
     text-align: center
     position: relative
