--- a/app/views/students/sidebar/_sidebar_grading_scheme.haml
+++ b/app/views/students/sidebar/_sidebar_grading_scheme.haml
@@ -2,12 +2,13 @@
   %h3 Course Progress
 .card-body
 
-  - next_element = current_student.next_element_level(current_course)
-  .progress.bar_magic.transparent.center
-    .meter
-      %i.fa.fa-lock
-      %span= next_element.name
-      %span=points next_element.low_range
+  - next_element = current_student.get_element_test(current_course, current_student, :next)
+  - if !next_element.nil?
+    .progress.bar_magic.transparent.center
+      .meter
+        %i.fa.fa-lock
+        %span= next_element.name
+        %span=points next_element.low_range
 
   - current_element = current_student.grade_for_course(current_course)
   .progress.bar_magic.current.center
@@ -15,17 +16,18 @@
     %span.your-rank= current_element.name
     .striped-bar-container
       .striped{:style => "width: #{current_element.progress_percent(current_student)}%;"}
-    .left.left-points
+    .left-points
       %span Your Points:
       %span.bold=points current_student.cached_score_for_course(current_course)
-    .right.right-points
+    .right-points
       %span Points to next level:
       %span.bold= points current_element.points_to_next_level(current_student, current_course)
 
-  - previous_element = current_student.previous_element_level(current_course)
-  .progress.bar_magic.success.center
-    .meter
-      %i.fa.fa-star
-      %span= previous_element.name
-      %span has already been achieved!
-      %span=points previous_element.low_range
+  - previous_element = current_student.get_element_test(current_course, current_student, :previous)
+  - if !previous_element.nil?
+    .progress.bar_magic.success.center
+      .meter
+        %i.fa.fa-star
+        %span= previous_element.name
+        %span has already been achieved!
+        %span=points previous_element.low_range
