added filter buttons to due this week module and cleaned up button styles that were being over written and unused

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -46,6 +46,9 @@
     &:nth-child(even)
       background-color: $color-grey-6
 
+  .planner-filter
+    white-space: nowrap
+
   .bar_magic
     border-radius: 5px
     padding: .25rem
