--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -8,7 +8,7 @@
   color: $color-white
   border: none
   margin: 0
-  padding: .4rem !important
+  padding: .4rem
   font-size: .7rem
   line-height: .8rem
   cursor: pointer
@@ -66,9 +66,9 @@
     li:last-child
       border-right: 0
       margin-left: 0rem
-      a
-        display: block
-        padding: .5rem .5rem
+    input.button, a
+      display: block
+      padding: .5rem .5rem
 
 thead
   .button
@@ -116,6 +116,17 @@ tbody
 .quick-grade-button
   display: inline-block
   margin-bottom: 1rem
+
+.filter-button
+  background-color: $color-white
+  color: $color-blue-3
+  display: block
+  width: 50%
+  border-radius: 0px
+  padding: 0.75rem 0rem
+  float: left
+  box-sizing: border-box
+  text-align: center
 
 .notification-badge
   background-color: $color-red-1
