--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -2,6 +2,9 @@
   .card-header
     %h3 Due This Week
   .card-body
+    .planner-filter.clearfix
+      = link_to "My Planner", "#", class: "filter-button button"
+      = link_to "Course Planner", "#", class: "filter-button button"
     - cache multi_cache_key :student_sidebar_todo_list, current_student, current_course do
       - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
         - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
