--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -119,7 +119,7 @@ tbody
 
 .filter-button
   background-color: $color-white
-  color: $color-blue-3
+  color: $color-grey-5
   display: block
   width: 50%
   border-radius: 0px
@@ -127,6 +127,14 @@ tbody
   float: left
   box-sizing: border-box
   text-align: center
+
+  &:hover
+    background-color: $color-white
+    color: $color-blue-3
+
+  &.selected
+    border-bottom: 2px solid $color-blue-3
+    color: $color-blue-3
 
 .notification-badge
   background-color: $color-red-1
