--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -1,32 +1,33 @@
 .text-center
   .card-header
     %h3 Due This Week
-  .card-body
+  .card-body#todo-list
     .planner-filter.clearfix
-      = link_to "My Planner", "#", class: "filter-button button"
-      = link_to "Course Planner", "#", class: "filter-button button"
-    - cache multi_cache_key :student_sidebar_todo_list, current_student, current_course do
-      - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
-        - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
-          .assignment-item
-            - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
-              - if assignment.is_individual?
-                .right= render "students/submissions", assignment: assignment
+      = link_to "My Planner", "#", class: "filter-button button", id: "my-planner"
+      = link_to "Course Planner", "#", class: "filter-button button selected", id: "course-planner"
+    %ul.todo-list-assignments
+      - cache multi_cache_key :student_sidebar_todo_list, current_student, current_course do
+        - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
+          - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
+            %li.assignment-item
+              - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
+                - if assignment.is_individual?
+                  .right= render "students/submissions", assignment: assignment
+                - else
+                  .right= render "students/group_submissions", assignment: assignment, group: current_student.group_for_assignment(assignment)
+              - if assignment.is_predicted_by_student?(current_student)
+                %a.starred
+                  %i.fa.fa-star.fa-fw.yellow
+                .display_on_hover.hover-style
+                  You have included this #{term_for :assignment} in your grade prediction
+              - if current_student.submission_for_assignment(assignment).present?
+                %span.strikethrough.assignment-name= link_to "#{assignment.try(:name)}", assignment
+                .small.uppercase= "#{assignment.assignment_type.name}"
               - else
-                .right= render "students/group_submissions", assignment: assignment, group: current_student.group_for_assignment(assignment)
-            - if assignment.is_predicted_by_student?(current_student)
-              %a
-                %i.fa.fa-star.fa-fw.yellow
-              .display_on_hover.hover-style
-                You have included this #{term_for :assignment} in your grade prediction
-            - if current_student.submission_for_assignment(assignment).present?
-              %span.strikethrough.assignment-name= link_to "#{assignment.try(:name)}", assignment
-              .small.uppercase= "#{assignment.assignment_type.name}"
-            - else
-              - if assignment.name_visible_for_student?(current_student)
-                %span.bold.assignment-name= link_to assignment.name, grade_path(Grade.find_or_create(assignment.id, current_student.id))
-              - else
-                %span.bold.assignment-name= "Locked #{(term_for :assignment ).titleize}"
-                %span.italic= "You must unlock this #{term_for :assignment } to learn more about it"
-              .small.uppercase= "#{assignment.assignment_type.name}"
-              .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
+                - if assignment.name_visible_for_student?(current_student)
+                  %span.bold.assignment-name= link_to assignment.name, grade_path(Grade.find_or_create(assignment.id, current_student.id))
+                - else
+                  %span.bold.assignment-name= "Locked #{(term_for :assignment ).titleize}"
+                  %span.italic= "You must unlock this #{term_for :assignment } to learn more about it"
+                .small.uppercase= "#{assignment.assignment_type.name}"
+                .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
