Updates to quick grade pass fail per Mike's feedback

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -251,7 +251,7 @@ input#grade_pass_fail_status
 input#grade_pass_fail_status + label
   display: block
   position: relative
-  text-indent: -5000px
+  text-indent: 3.5rem
   height: 1.5rem
   width: 50px
   border-radius: 15px
