added logic to change background color of starred todo list tasks

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -52,7 +52,7 @@
       border-bottom: none
 
     &.starred
-      background-color: transparentize($color-green-2, .8)
+      background-color: transparentize($color-blue-4, .8)
 
   .planner-filter
     white-space: nowrap
@@ -92,7 +92,7 @@
     font-size: .9rem
 
   .form_label
-    color: $color-green-2
+    color: $color-grey-2
     font-style: normal
     font-weight: 300
 
