--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -9,7 +9,7 @@
       - cache multi_cache_key :student_sidebar_todo_list, current_student, current_course do
         - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
           - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
-            %li.assignment-item
+            %li{:class => assignment.is_predicted_by_student?(current_student) ? "assignment-item starred" : "assignment-item"}
               - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
                 - if assignment.is_individual?
                   .right= render "students/submissions", assignment: assignment
