--- a/app/views/students/_submissions.html.haml
+++ b/app/views/students/_submissions.html.haml
@@ -2,19 +2,19 @@
 - if assignment.is_individual?
   - if student_submission.present?
     - if current_user_is_student?
-      %li= link_to glyph("file-o") + "See Submission", assignment_path(assignment, anchor: "tab3"), class: "button"
+      = link_to glyph("file-o") + "See Submission", assignment_path(assignment, anchor: "tab3"), class: "button"
     - else
-      %li= link_to glyph("file-o") + "See Submission", assignment_submission_path(assignment, student_submission.id), class: "button"
+      = link_to glyph("file-o") + "See Submission", assignment_submission_path(assignment, student_submission.id), class: "button"
   - elsif assignment.open?
-    %li= link_to glyph(:upload) + "Submit", new_assignment_submission_path(assignment, student_id: current_student), class: "button"
+    = link_to glyph(:upload) + "Submit", new_assignment_submission_path(assignment, student_id: current_student), class: "button"
 - elsif assignment.has_groups?
   - group = current_student.group_for_assignment(assignment)
   - if group.present?
     - submission = group.submission_for_assignment(assignment)
   - if group.present?
     - if submission.present?
-      %li= link_to glyph(:edit) + "Edit Our Submission", edit_assignment_submission_path(assignment, id: submission), class: "button"
+      = link_to glyph(:edit) + "Edit Our Submission", edit_assignment_submission_path(assignment, id: submission), class: "button"
     - elsif group.approved?
-      %li= link_to glyph(:upload) + "Submit", new_assignment_submission_path(assignment, group_id: group), class: "button"
+      = link_to glyph(:upload) + "Submit", new_assignment_submission_path(assignment, group_id: group), class: "button"
   - else
-    %li= link_to "Create a Group", new_group_path, class: "button"
+    = link_to "Create a Group", new_group_path, class: "button"
