added vendor prefixes for flex

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -2,11 +2,25 @@
 @import layout
 
 .student-sidebar
+  display: -webkit-box
+  display: -webkit-flex
+  display: -ms-flexbox
   display: flex
+  -webkit-box-orient: horizontal
+  -webkit-box-direction: normal
+  -webkit-flex-direction: row
+  -ms-flex-direction: row
   flex-direction: row
 
   .col-30, .col-40
+    display: -webkit-box
+    display: -webkit-flex
+    display: -ms-flexbox
     display: flex
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -webkit-flex-direction: column
+    -ms-flex-direction: column
     flex-direction: column
     margin-right: 1rem
 
