switched ordering of course and my planner, retitled student tab to dashboard, increased font weight of links in todo list

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -74,9 +74,15 @@
       transform: translateY(-50%)
       right: 8px
 
+    a
+      font-weight: 400
+
   .planner-filter
     white-space: nowrap
     border-bottom: 1px solid $color-grey-6
+
+    a
+      font-weight: 400
 
   .bar_magic
     border-radius: 5px
