--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -16,7 +16,7 @@
         = link_to_unless_current glyph(:users) + "#{term_for :teams}", student_teams_path(current_student)
   - else
     %li{class: ("active" if current_page?(dashboard_path)) }
-      = link_to_unless_current glyph(:home) + "Timeline", dashboard_path
+      = link_to_unless_current glyph(:home) + "Dashboard", dashboard_path
     %li{class: ("active" if current_page?(syllabus_path)) }
       = link_to_unless_current glyph('file-text') + "#{term_for :assignments}", syllabus_path
     - if current_course.grade_scheme_elements.present?
