added slick plugin for course events module slider

--- a/app/views/students/sidebar/_sidebar_course_events.haml
+++ b/app/views/students/sidebar/_sidebar_course_events.haml
@@ -1,3 +1,10 @@
 .card-header
   %h3 Upcoming Events
 .card-body
+  .slide-container
+    .slide1
+      %p slide 1
+    .slide2
+      %p slide 2
+    .slide3
+      %p slide 3
