--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
   *= require angular-tooltips.min
   *= require timelineJS/timeline
   *= require stacktable.css
+  *= require slick.css
   *= require plugins/char_counter.min.css
   *= require plugins/code_view.min.css
   *= require plugins/colors.min.css
