--- a/app/views/notification_mailer/grade_released.text.haml
+++ b/app/views/notification_mailer/grade_released.text.haml
@@ -2,6 +2,8 @@ Dear #{ @student.first_name },
 
 You can now view the grade for your #{ @course.assignment_term.downcase } "#{ @assignment.name }" in course #{ @course.name }.
 
+Visit https://www.gradecraft.com/assignments/#{ @assignment.id } to view feedback for the assignment.
+
 Don't forget to update your plan for the semester by checking your grade predictor here: https://www.gradecraft.com/predictor
 
 Play on!
