added loop for event information on slides and beginning styling

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -150,6 +150,14 @@
   .button
     border-radius: $global-radius
 
+/* Styles course events slider */
+.slick-slide
+  height: auto
+  padding: 0.25rem 1.5rem
+
+.event-description, .event-image
+  width: 50%
+  float: left
 
 @media (max-width: $media-small-max)
   #student-dashboard
