concat event start and end date

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -155,8 +155,8 @@
   height: auto
   padding: 0.25rem 1.5rem
 
-.event-description, .event-image
-  width: 50%
+.event-image
+  // width: 50%
   float: left
 
 @media (max-width: $media-small-max)
