truncated event description text and added link to event show page, styled next and previous buttons

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -155,9 +155,45 @@
   height: auto
   padding: 0.25rem 1.5rem
 
+.event-name
+  font-size: 1rem
+  text-align: center
+
 .event-image
-  // width: 50%
   float: left
+  padding-right: 1rem
+  max-width: 128px
+
+.event-date
+  font-size: 0.8rem
+  color: $color-grey-3
+  margin-top: 0.2rem
+  text-align: center
+
+.slider-direction-button
+  position: absolute
+  top: 8%
+  display: block
+  font-size: 0.8rem
+  width: 1.2rem
+  text-align: center
+  line-height: 1.2rem
+  padding: .1rem
+  cursor: pointer
+  z-index: 10
+  color: $color-blue-3
+  border-radius: 50%
+  border: 1px solid $color-blue-3
+  &:hover
+    text-decoration: none
+    background-color: $color-blue-3
+    color: $color-white
+
+  &.next
+    right: 5px
+
+  &.previous
+    left: 5px
 
 @media (max-width: $media-small-max)
   #student-dashboard
