--- a/app/views/students/sidebar/_sidebar_course_events.haml
+++ b/app/views/students/sidebar/_sidebar_course_events.haml
@@ -5,10 +5,13 @@
     - @events.each do |event|
       .event-slide
         .slide-header
-          %h3= link_to event.name, event
-          %p.event-date= "#{event.open_at} - #{event.due_at}"
+          %h4.event-name= link_to event.name, event
+        - if event.open_at || event.due_at?
+          %p.event-date= glyph(:calendar) + "#{event.open_at} - #{event.due_at}"
         .slide-body
           .event-image
             %img{:src => event.media }
           .event-description
-            %p= raw event.description
+            %p
+              = (truncate event.description, :length => 200, :omission => "...", :escape => false)
+              = link_to "Read More", event_path(event)
