updated froala z-index to prevent it from covering elements of the page such as datepicker

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,7 @@
   *= require _history_timeline
   *= require _footer
   *= require _forms
+  *= require _froala
   *= require _newsletter
   *= require _predictor
   *= require _grades
