--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -148,6 +148,16 @@
     border-radius: $global-radius
 
 /* Styles course events slider */
+#events-loading-spinner
+  margin: 0 auto
+  display: block
+
+.slide-container
+  display: none
+
+.slick-slider
+  display: block
+
 .slick-slide
   height: auto
   padding: 0.25rem 1.5rem
