removed timeline from instructor, admin and gsi dashboard

--- a/app/views/info/_admin_dashboard.html.haml
+++ b/app/views/info/_admin_dashboard.html.haml
@@ -1,8 +1,4 @@
-%h3.pagetitle Course Timeline
+%h3.pagetitle Dashboard
 
 .pageContent
   = render "layouts/alerts"
-
-  #loading
-    Loading data, please wait...
-  #time_line{}
