--- a/app/views/info/_professor_dashboard.html.haml
+++ b/app/views/info/_professor_dashboard.html.haml
@@ -1,9 +1,5 @@
-%h3.pagetitle Course Timeline
+%h3.pagetitle Dashboard
 
 .pageContent
 
   = render "layouts/alerts"
-
-  #loading
-    Loading data, please wait...
-  #time_line{}
