added minimal styling to events show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,6 +45,7 @@
   *= require _predictor
   *= require _grades
   *= require _badges
+  *= require _events
   *= require _grid
   *= require _homepage
   *= require _pages
